[package]
name = "const-table"
version = "0.1.0"
authors = ["Tristan Dannenberg <dtristan@hotmail.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Associate struct-typed constants with enum variants"
repository = "https://github.com/teryror/const-table"
readme = "README.MD"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
